Fix navbar z-index on mobile

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -82,6 +82,7 @@
     background-color: var(--muted);
 
     transform: translateX(var(--x));
+    z-index: 10;
   }
 
   .linkItem {
